# federated-system

./: README.md  lab.ipynb  pyproject.toml  requirements.txt
fl_draft/: __init__.py  centralized.py  client1.py  server.py
