[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-draft"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr>=1.17.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flower"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 0.5
local-epochs = 1